--- a/foundry.toml
+++ b/foundry.toml
@@ -3,3 +3,4 @@ src = "src"
 out = "out"
 libs = ["lib"]
 remappings = ["@chainlink/contracts/=lib/forge-std/chainlink-brownie-contracts/contracts/"]
+fs_permissions = [{ access = "read", path = "./broadcast" }]
